# BUAA_SE_PairProgramming

./: .gitignore  README.md
src/: .gitignore  CMakeLists.txt  api.cpp  api.h  bugReport.cpp  bugReport.h  engine.cpp  engine.h  main.cpp  output.cpp  output.h  paramException.h  paramParser.cpp  paramParser.h  unitTest.cpp  unitTest.h
src/guibin/: package-lock.json  package.json  testDll.js  vue.config.js
src/guibin/src/: App.vue  MaterialCard.vue  background.js
src/guibin/src/plugins/: vuetify.js
src/include/: api.h  bugReport.h  engine.h  output.h  paramParser.h  test.h
src/test/: randomTest.cpp  unitTest.cpp
